Update generated documentation for version 0.9.0-beta-4

--- a/react-native.html
+++ b/react-native.html
@@ -87,6 +87,7 @@
 <span class="l">52: </span>
 <span class="l">53: </span>
 <span class="l">54: </span>
+<span class="l">55: </span>
 </pre></td>
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">namespace</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="i">ReactNative</span>
 
@@ -123,7 +124,8 @@
 
 [&lt;<span class="i">Import</span>(<span class="s">&quot;AppRegistry&quot;</span>,<span class="s">&quot;react-native&quot;</span>)&gt;] 
 <span class="k">type</span> <span onmouseout="hideTip(event, 'fs32', 62)" onmouseover="showTip(event, 'fs32', 62)" class="t">AppRegistry</span> <span class="o">=</span>
-    <span class="k">static</span> <span class="k">member</span> <span onmouseout="hideTip(event, 'fs33', 63)" onmouseover="showTip(event, 'fs33', 63)" class="f">registerComponent</span>(<span onmouseout="hideTip(event, 'fs34', 64)" onmouseover="showTip(event, 'fs34', 64)" class="i">appKey</span><span class="o">:</span><span onmouseout="hideTip(event, 'fs35', 65)" onmouseover="showTip(event, 'fs35', 65)" class="t">string</span>, <span onmouseout="hideTip(event, 'fs36', 66)" onmouseover="showTip(event, 'fs36', 66)" class="f">getComponentFunc</span><span class="o">:</span><span onmouseout="hideTip(event, 'fs11', 67)" onmouseover="showTip(event, 'fs11', 67)" class="t">unit</span><span class="k">-&gt;</span><span onmouseout="hideTip(event, 'fs37', 68)" onmouseover="showTip(event, 'fs37', 68)" class="t">ComponentClass</span><span class="o">&lt;</span>_<span class="o">&gt;</span>) <span class="o">:</span> <span onmouseout="hideTip(event, 'fs11', 69)" onmouseover="showTip(event, 'fs11', 69)" class="t">unit</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs24', 70)" onmouseover="showTip(event, 'fs24', 70)" class="f">failwith</span> <span class="s">&quot;JS only&quot;</span>
+    <span class="k">static</span> <span class="k">member</span> <span onmouseout="hideTip(event, 'fs33', 63)" onmouseover="showTip(event, 'fs33', 63)" class="f">registerComponent</span>(<span onmouseout="hideTip(event, 'fs34', 64)" onmouseover="showTip(event, 'fs34', 64)" class="i">appKey</span><span class="o">:</span><span onmouseout="hideTip(event, 'fs35', 65)" onmouseover="showTip(event, 'fs35', 65)" class="t">string</span>, <span onmouseout="hideTip(event, 'fs36', 66)" onmouseover="showTip(event, 'fs36', 66)" class="f">getComponentFunc</span><span class="o">:</span><span onmouseout="hideTip(event, 'fs11', 67)" onmouseover="showTip(event, 'fs11', 67)" class="t">unit</span><span class="k">-&gt;</span><span onmouseout="hideTip(event, 'fs37', 68)" onmouseover="showTip(event, 'fs37', 68)" class="t">ComponentClass</span><span class="o">&lt;</span>_<span class="o">&gt;</span>) <span class="o">:</span> <span onmouseout="hideTip(event, 'fs11', 69)" onmouseover="showTip(event, 'fs11', 69)" class="t">unit</span> <span class="o">=</span> 
+        <span onmouseout="hideTip(event, 'fs24', 70)" onmouseover="showTip(event, 'fs24', 70)" class="f">failwith</span> <span class="s">&quot;JS only&quot;</span>
 
 [&lt;<span onmouseout="hideTip(event, 'fs38', 71)" onmouseover="showTip(event, 'fs38', 71)" class="t">RequireQualifiedAccess</span>&gt;]
 <span class="k">module</span> <span onmouseout="hideTip(event, 'fs39', 72)" onmouseover="showTip(event, 'fs39', 72)" class="t">Program</span> <span class="o">=</span>
