--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 <p>Rendering of any view can be optimizied by avoiding the DOM reconciliation and skipping the DOM construction entierly if there are no changes in the model.</p>
 <p><code>lazyView</code> can be used with equattable models (most F# core types: records, tuples,etc).</p>
 <p><code>lazyViewWith</code> can be used with types that don't implement <code>equality</code> constraint, such as types/instances coming from JS libraries, by passing the custom <code>equal</code> function that compares the previous and the new models.</p>
-<p>These functions work for both React and React Native views, here are some examples:</p>
+<p>These functions work for both React and React Native views, here are some examples.</p>
+<p>Given a view function of one argument:</p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
 <span class="l">2: </span>
 <span class="l">3: </span>
@@ -57,32 +58,29 @@
 <span class="l">6: </span>
 <span class="l">7: </span>
 <span class="l">8: </span>
-<span class="l">9: </span>
 </pre></td>
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs10', 40)" onmouseover="showTip(event, 'fs10', 40)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs21', 41)" onmouseover="showTip(event, 'fs21', 41)" class="i">React</span>
 
-<span class="c">// given a view function of one argument:</span>
 <span class="c">// val view : &#39;a -&gt; ReactElement</span>
 <span onmouseout="hideTip(event, 'fs22', 42)" onmouseover="showTip(event, 'fs22', 42)" class="f">lazyView</span> <span onmouseout="hideTip(event, 'fs1', 43)" onmouseover="showTip(event, 'fs1', 43)" class="f">view1</span> <span onmouseout="hideTip(event, 'fs15', 44)" onmouseover="showTip(event, 'fs15', 44)" class="i">model</span> 
 
-<span class="c">// given a typical view function, defined like this:</span>
+<span class="c">// or given a typical view function, defined like this:</span>
 <span class="c">// val view : &#39;a -&gt; Dispatch&lt;&#39;msg&gt; -&gt; ReactElement</span>
 <span onmouseout="hideTip(event, 'fs23', 45)" onmouseover="showTip(event, 'fs23', 45)" class="f">lazyView2</span> <span onmouseout="hideTip(event, 'fs8', 46)" onmouseover="showTip(event, 'fs8', 46)" class="f">view2</span> <span onmouseout="hideTip(event, 'fs15', 47)" onmouseover="showTip(event, 'fs15', 47)" class="i">model</span> <span onmouseout="hideTip(event, 'fs19', 48)" onmouseover="showTip(event, 'fs19', 48)" class="f">dispatch</span> 
 </code></pre></td>
 </tr>
 </table>
-<p>will cache the rendered view for as long as model remains the same</p>
+<p>the rendered view will be cached for as long as <code>model</code> remains the same.</p>
+<p>Given a view function of three arguments:</p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
 <span class="l">2: </span>
-<span class="l">3: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="c">// given a view function of three arguments:</span>
-<span class="c">// val view : &#39;a -&gt; &#39;b -&gt; Dispatch&lt;&#39;msg&gt; -&gt; ReactElement</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="c">// val view : &#39;a -&gt; &#39;b -&gt; Dispatch&lt;&#39;msg&gt; -&gt; ReactElement</span>
 <span onmouseout="hideTip(event, 'fs24', 49)" onmouseover="showTip(event, 'fs24', 49)" class="f">lazyView3</span> <span onmouseout="hideTip(event, 'fs12', 50)" onmouseover="showTip(event, 'fs12', 50)" class="f">view3</span> <span onmouseout="hideTip(event, 'fs17', 51)" onmouseover="showTip(event, 'fs17', 51)" class="i">model1</span> <span onmouseout="hideTip(event, 'fs18', 52)" onmouseover="showTip(event, 'fs18', 52)" class="i">model2</span> <span onmouseout="hideTip(event, 'fs19', 53)" onmouseover="showTip(event, 'fs19', 53)" class="f">dispatch</span>
 </code></pre></td>
 </tr>
 </table>
-<p>will skip calling the view3 for as long as both model1 and model2 remain unmodified</p>
+<p>Elmish.React will skip calling the <code>view3</code> for as long as both <code>model1</code> and <code>model2</code> remain unmodified.</p>
 
 <div class="tip" id="fs1">val view1 : model:&#39;a -&gt; Fable.Import.React.ReactElement<br /><br />Full name: Index.view1</div>
 <div class="tip" id="fs2">val model : &#39;a</div>
