--- a/browser.html
+++ b/browser.html
@@ -15,10 +15,7 @@
 
     <link type="text/css" rel="stylesheet" href="https://fable-elmish.github.io/react/content/style_light.css" />
     <script type="text/javascript" src="https://fable-elmish.github.io/react/content/tips.js"></script>
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
+    <style>span.l { display: none }</style>
   </head>
   <body>
     <div class="container">
@@ -101,6 +98,7 @@
 </code></pre></td>
 </tr>
 </table>
+<p>by augumenting our program instance and passing the placeholder id:</p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
 <span class="l">2: </span>
 <span class="l">3: </span>
