Update generated documentation for version 0.9.0

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Elmish-react: React extensions for Elmish apps
+    <title>React extensions for Elmish apps
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Elmish React extensions"/>
@@ -31,7 +31,7 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1><a name="Elmish-react-React-extensions-for-Elmish-apps" class="anchor" href="#Elmish-react-React-extensions-for-Elmish-apps">Elmish-react: React extensions for Elmish apps</a></h1>
+<h1><a name="React-extensions-for-Elmish-apps" class="anchor" href="#React-extensions-for-Elmish-apps">React extensions for Elmish apps</a></h1>
 <p>Elmish-react implements boilerplate to wireup the rendering of React and ReactNative components and several rendering optimization functions.</p>
 <h2><a name="Installation" class="anchor" href="#Installation">Installation</a></h2>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
