Update generated documentation for version 1.0.0-beta-1

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </code></pre></td></tr></table>
 <h2><a name="Program-module-extensions" class="anchor" href="#Program-module-extensions">Program module extensions</a></h2>
 <p>Both React and React Native applications needs a root component to be rendered at the specified placeholder, see
-<a href="/browser.html">browser</a> and <a href="/native.html">native</a> tutorials for details.</p>
+<a href="./browser.html">browser</a> and <a href="./native.html">native</a> tutorials for details.</p>
 <h2><a name="Lazy-views" class="anchor" href="#Lazy-views">Lazy views</a></h2>
 <p>Rendering of any view can be optimizied by avoiding the DOM reconciliation and skipping the DOM construction entierly if there are no changes in the model.</p>
 <p><code>lazyView</code> can be used with equattable models (most F# core types: records, tuples,etc).</p>
