Update generated documentation for version 1.0.1-beta-1

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 </pre></td>
 <td class="snippet"><pre class="fssnip"><code lang="shell">paket add nuget Fable.Elmish.React
 </code></pre></td></tr></table>
+<p>You also need to install React:</p>
+<table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
+</pre></td>
+<td class="snippet"><pre class="fssnip"><code lang="shell">yarn add react react-dom
+</code></pre></td></tr></table>
 <h2><a name="Program-module-extensions" class="anchor" href="#Program-module-extensions">Program module extensions</a></h2>
 <p>Both React and React Native applications need a root component to be rendered at the specified placeholder, see
 <a href="./browser.html">browser</a> and <a href="./native.html">native</a> tutorials for details.</p>
