--- a/browser.html
+++ b/browser.html
@@ -13,19 +13,19 @@
     <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet"/>
 
-    <link type="text/css" rel="stylesheet" href="https://fable-elmish.github.io/react/content/style_light.css" />
-    <script type="text/javascript" src="https://fable-elmish.github.io/react/content/tips.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://elmish.github.io/react/content/style_light.css" />
+    <script type="text/javascript" src="https://elmish.github.io/react/content/tips.js"></script>
     <style>span.l { display: none }</style>
   </head>
   <body>
     <div class="container">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li><a href="https://fable-elmish.github.io">fable-elmish</a></li>
+          <li><a href="https://elmish.github.io">elmish</a></li>
           <li><a href="http://fable.io">fable</a></li>
           <li><a href="http://fsharp.org">fsharp.org</a></li>
         </ul>
-        <h3 class="muted"><a href="https://fable-elmish.github.io/react/index.html">elmish-react</a></h3>
+        <h3 class="muted"><a href="https://elmish.github.io/react/index.html">elmish-react</a></h3>
       </div>
       <hr />
       <div class="row">
@@ -78,15 +78,15 @@
 <span class="l">8: </span>
 <span class="l">9: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs11', 18)" onmouseover="showTip(event, 'fs11', 18)" class="i">Fable</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs12', 19)" onmouseover="showTip(event, 'fs12', 19)" class="i">Helpers</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs13', 20)" onmouseover="showTip(event, 'fs13', 20)" class="i">React</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs14', 21)" onmouseover="showTip(event, 'fs14', 21)" class="i">Props</span>
-<span class="k">module</span> <span onmouseout="hideTip(event, 'fs13', 22)" onmouseover="showTip(event, 'fs13', 22)" class="t">R</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs11', 23)" onmouseover="showTip(event, 'fs11', 23)" class="i">Fable</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs12', 24)" onmouseover="showTip(event, 'fs12', 24)" class="i">Helpers</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs13', 25)" onmouseover="showTip(event, 'fs13', 25)" class="i">React</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span class="i">Fable</span><span class="o">.</span><span class="i">Helpers</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs11', 18)" onmouseover="showTip(event, 'fs11', 18)" class="i">React</span><span class="o">.</span><span class="i">Props</span>
+<span class="k">module</span> <span class="i">R</span> <span class="o">=</span> <span class="i">Fable</span><span class="o">.</span><span class="i">Helpers</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs11', 19)" onmouseover="showTip(event, 'fs11', 19)" class="i">React</span>
 
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs15', 26)" onmouseover="showTip(event, 'fs15', 26)" class="f">view</span> <span onmouseout="hideTip(event, 'fs16', 27)" onmouseover="showTip(event, 'fs16', 27)" class="i">model</span> <span onmouseout="hideTip(event, 'fs17', 28)" onmouseover="showTip(event, 'fs17', 28)" class="f">dispatch</span> <span class="o">=</span>
+<span class="k">let</span> <span onmouseout="hideTip(event, 'fs12', 20)" onmouseover="showTip(event, 'fs12', 20)" class="f">view</span> <span onmouseout="hideTip(event, 'fs13', 21)" onmouseover="showTip(event, 'fs13', 21)" class="i">model</span> <span onmouseout="hideTip(event, 'fs14', 22)" onmouseover="showTip(event, 'fs14', 22)" class="i">dispatch</span> <span class="o">=</span>
 
-  <span onmouseout="hideTip(event, 'fs13', 29)" onmouseover="showTip(event, 'fs13', 29)" class="t">R</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs18', 30)" onmouseover="showTip(event, 'fs18', 30)" class="f">div</span> []
-      [ <span onmouseout="hideTip(event, 'fs13', 31)" onmouseover="showTip(event, 'fs13', 31)" class="t">R</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs19', 32)" onmouseover="showTip(event, 'fs19', 32)" class="f">button</span> [ <span onmouseout="hideTip(event, 'fs20', 33)" onmouseover="showTip(event, 'fs20', 33)" class="p">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs17', 34)" onmouseover="showTip(event, 'fs17', 34)" class="f">dispatch</span> <span onmouseout="hideTip(event, 'fs6', 35)" onmouseover="showTip(event, 'fs6', 35)" class="p">Decrement</span>) ] [ <span onmouseout="hideTip(event, 'fs13', 36)" onmouseover="showTip(event, 'fs13', 36)" class="t">R</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs21', 37)" onmouseover="showTip(event, 'fs21', 37)" class="f">str</span> <span class="s">&quot;-&quot;</span> ]
-        <span onmouseout="hideTip(event, 'fs13', 38)" onmouseover="showTip(event, 'fs13', 38)" class="t">R</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs18', 39)" onmouseover="showTip(event, 'fs18', 39)" class="f">div</span> [] [ <span onmouseout="hideTip(event, 'fs13', 40)" onmouseover="showTip(event, 'fs13', 40)" class="t">R</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs21', 41)" onmouseover="showTip(event, 'fs21', 41)" class="f">str</span> (<span onmouseout="hideTip(event, 'fs22', 42)" onmouseover="showTip(event, 'fs22', 42)" class="f">sprintf</span> <span class="s">&quot;</span><span class="pf">%A</span><span class="s">&quot;</span> <span onmouseout="hideTip(event, 'fs16', 43)" onmouseover="showTip(event, 'fs16', 43)" class="i">model</span>) ]
-        <span onmouseout="hideTip(event, 'fs13', 44)" onmouseover="showTip(event, 'fs13', 44)" class="t">R</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs19', 45)" onmouseover="showTip(event, 'fs19', 45)" class="f">button</span> [ <span onmouseout="hideTip(event, 'fs20', 46)" onmouseover="showTip(event, 'fs20', 46)" class="p">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs17', 47)" onmouseover="showTip(event, 'fs17', 47)" class="f">dispatch</span> <span onmouseout="hideTip(event, 'fs5', 48)" onmouseover="showTip(event, 'fs5', 48)" class="p">Increment</span>) ] [ <span onmouseout="hideTip(event, 'fs13', 49)" onmouseover="showTip(event, 'fs13', 49)" class="t">R</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs21', 50)" onmouseover="showTip(event, 'fs21', 50)" class="f">str</span> <span class="s">&quot;+&quot;</span> ] ]
+  <span class="i">R</span><span class="o">.</span><span class="i">div</span> []
+      [ <span class="i">R</span><span class="o">.</span><span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs14', 23)" onmouseover="showTip(event, 'fs14', 23)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs6', 24)" onmouseover="showTip(event, 'fs6', 24)" class="i">Decrement</span>) ] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> <span class="s">&quot;-&quot;</span> ]
+        <span class="i">R</span><span class="o">.</span><span class="i">div</span> [] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> (<span onmouseout="hideTip(event, 'fs15', 25)" onmouseover="showTip(event, 'fs15', 25)" class="i">sprintf</span> <span class="s">&quot;%A&quot;</span> <span onmouseout="hideTip(event, 'fs13', 26)" onmouseover="showTip(event, 'fs13', 26)" class="i">model</span>) ]
+        <span class="i">R</span><span class="o">.</span><span class="i">button</span> [ <span class="i">OnClick</span> (<span class="k">fun</span> _ <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs14', 27)" onmouseover="showTip(event, 'fs14', 27)" class="i">dispatch</span> <span onmouseout="hideTip(event, 'fs5', 28)" onmouseover="showTip(event, 'fs5', 28)" class="i">Increment</span>) ] [ <span class="i">R</span><span class="o">.</span><span class="i">str</span> <span class="s">&quot;+&quot;</span> ] ]
 </code></pre></td>
 </tr>
 </table>
@@ -94,7 +94,7 @@
 <p>Now we need to tell React to render our view in the div placeholder we defined in our <code>index.html</code>:</p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="o">&lt;</span><span class="i">div</span> <span onmouseout="hideTip(event, 'fs23', 51)" onmouseover="showTip(event, 'fs23', 51)" class="i">id</span><span class="o">=</span><span class="s">&quot;elmish-app&quot;</span><span class="o">&gt;</span><span class="o">&lt;/</span><span class="i">div</span><span class="o">&gt;</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="o">&lt;</span><span class="i">div</span> <span onmouseout="hideTip(event, 'fs16', 29)" onmouseover="showTip(event, 'fs16', 29)" class="i">id</span><span class="o">=</span><span class="s">&quot;elmish-app&quot;</span><span class="o">&gt;</span><span class="o">&lt;/</span><span class="i">div</span><span class="o">&gt;</span>
 </code></pre></td>
 </tr>
 </table>
@@ -105,11 +105,11 @@
 <span class="l">4: </span>
 <span class="l">5: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 52)" onmouseover="showTip(event, 'fs1', 52)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs24', 53)" onmouseover="showTip(event, 'fs24', 53)" class="i">React</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 30)" onmouseover="showTip(event, 'fs1', 30)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs11', 31)" onmouseover="showTip(event, 'fs11', 31)" class="i">React</span>
 
-<span onmouseout="hideTip(event, 'fs25', 54)" onmouseover="showTip(event, 'fs25', 54)" class="t">Program</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs26', 55)" onmouseover="showTip(event, 'fs26', 55)" class="f">mkSimple</span> <span onmouseout="hideTip(event, 'fs7', 56)" onmouseover="showTip(event, 'fs7', 56)" class="f">init</span> <span onmouseout="hideTip(event, 'fs8', 57)" onmouseover="showTip(event, 'fs8', 57)" class="f">update</span> <span onmouseout="hideTip(event, 'fs15', 58)" onmouseover="showTip(event, 'fs15', 58)" class="f">view</span>
-<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs25', 59)" onmouseover="showTip(event, 'fs25', 59)" class="t">Program</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs27', 60)" onmouseover="showTip(event, 'fs27', 60)" class="f">withReact</span> <span class="s">&quot;elmish-app&quot;</span>
-<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs25', 61)" onmouseover="showTip(event, 'fs25', 61)" class="t">Program</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs28', 62)" onmouseover="showTip(event, 'fs28', 62)" class="f">run</span>
+<span onmouseout="hideTip(event, 'fs17', 32)" onmouseover="showTip(event, 'fs17', 32)" class="i">Program</span><span class="o">.</span><span class="i">mkSimple</span> <span onmouseout="hideTip(event, 'fs7', 33)" onmouseover="showTip(event, 'fs7', 33)" class="i">init</span> <span onmouseout="hideTip(event, 'fs8', 34)" onmouseover="showTip(event, 'fs8', 34)" class="i">update</span> <span onmouseout="hideTip(event, 'fs12', 35)" onmouseover="showTip(event, 'fs12', 35)" class="i">view</span>
+<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs17', 36)" onmouseover="showTip(event, 'fs17', 36)" class="t">Program</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs18', 37)" onmouseover="showTip(event, 'fs18', 37)" class="f">withReact</span> <span class="s">&quot;elmish-app&quot;</span>
+<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs17', 38)" onmouseover="showTip(event, 'fs17', 38)" class="i">Program</span><span class="o">.</span><span class="i">run</span>
 </code></pre></td>
 </tr>
 </table>
@@ -125,38 +125,28 @@
 <div class="tip" id="fs8">val update : msg:Msg -&gt; count:int -&gt; int<br /><br />Full name: Browser.update</div>
 <div class="tip" id="fs9">val msg : Msg</div>
 <div class="tip" id="fs10">val count : int</div>
-<div class="tip" id="fs11">namespace Fable</div>
-<div class="tip" id="fs12">namespace Fable.Helpers</div>
-<div class="tip" id="fs13">module React<br /><br />from Fable.Helpers</div>
-<div class="tip" id="fs14">module Props<br /><br />from Fable.Helpers.React</div>
-<div class="tip" id="fs15">val view : model:&#39;a -&gt; dispatch:(Msg -&gt; unit) -&gt; Fable.Import.React.ReactElement<br /><br />Full name: Browser.view</div>
-<div class="tip" id="fs16">val model : &#39;a</div>
-<div class="tip" id="fs17">val dispatch : (Msg -&gt; unit)</div>
-<div class="tip" id="fs18">val div : b:IHTMLProp list -&gt; c:Fable.Import.React.ReactElement list -&gt; Fable.Import.React.ReactElement<br /><br />Full name: Fable.Helpers.React.div</div>
-<div class="tip" id="fs19">val button : b:IHTMLProp list -&gt; c:Fable.Import.React.ReactElement list -&gt; Fable.Import.React.ReactElement<br /><br />Full name: Fable.Helpers.React.button</div>
-<div class="tip" id="fs20">union case DOMAttr.OnClick: (Fable.Import.React.MouseEvent -&gt; unit) -&gt; DOMAttr</div>
-<div class="tip" id="fs21">val str : s:string -&gt; Fable.Import.React.ReactElement<br /><br />Full name: Fable.Helpers.React.str</div>
-<div class="tip" id="fs22">val sprintf : format:Printf.StringFormat&lt;&#39;T&gt; -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.ExtraTopLevelOperators.sprintf</div>
-<div class="tip" id="fs23">val id : x:&#39;T -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.id</div>
-<div class="tip" id="fs24">namespace Elmish.React</div>
-<div class="tip" id="fs25">Multiple items<br />module Program<br /><br />from Elmish.React<br /><br />--------------------<br />module Program<br /><br />from Elmish<br /><br />--------------------<br />type Program&lt;&#39;arg,&#39;model,&#39;msg,&#39;view&gt; =<br />&#160;&#160;{init: &#39;arg -&gt; &#39;model * Cmd&lt;&#39;msg&gt;;<br />&#160;&#160;&#160;update: &#39;msg -&gt; &#39;model -&gt; &#39;model * Cmd&lt;&#39;msg&gt;;<br />&#160;&#160;&#160;subscribe: &#39;model -&gt; Cmd&lt;&#39;msg&gt;;<br />&#160;&#160;&#160;view: &#39;model -&gt; Dispatch&lt;&#39;msg&gt; -&gt; &#39;view;<br />&#160;&#160;&#160;setState: &#39;model -&gt; Dispatch&lt;&#39;msg&gt; -&gt; unit;<br />&#160;&#160;&#160;onError: string * exn -&gt; unit;}<br /><br />Full name: Elmish.Program&lt;_,_,_,_&gt;</div>
-<div class="tip" id="fs26">val mkSimple : init:(&#39;arg -&gt; &#39;model) -&gt; update:(&#39;msg -&gt; &#39;model -&gt; &#39;model) -&gt; view:(&#39;model -&gt; Dispatch&lt;&#39;msg&gt; -&gt; &#39;view) -&gt; Program&lt;&#39;arg,&#39;model,&#39;msg,&#39;view&gt;<br /><br />Full name: Elmish.Program.mkSimple</div>
-<div class="tip" id="fs27">val withReact : placeholderId:string -&gt; program:Program&lt;&#39;a,&#39;b,&#39;c,Fable.Import.React.ReactElement&gt; -&gt; Program&lt;&#39;a,&#39;b,&#39;c,Fable.Import.React.ReactElement&gt;<br /><br />Full name: Elmish.React.Program.withReact</div>
-<div class="tip" id="fs28">val run : program:Program&lt;unit,&#39;model,&#39;msg,&#39;view&gt; -&gt; unit<br /><br />Full name: Elmish.Program.run</div>
+<div class="tip" id="fs11">namespace Elmish.React</div>
+<div class="tip" id="fs12">val view : model:&#39;a -&gt; dispatch:&#39;b -&gt; &#39;c<br /><br />Full name: Browser.view</div>
+<div class="tip" id="fs13">val model : &#39;a</div>
+<div class="tip" id="fs14">val dispatch : &#39;b</div>
+<div class="tip" id="fs15">val sprintf : format:Printf.StringFormat&lt;&#39;T&gt; -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.ExtraTopLevelOperators.sprintf</div>
+<div class="tip" id="fs16">val id : x:&#39;T -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.id</div>
+<div class="tip" id="fs17">module Program<br /><br />from Elmish.React</div>
+<div class="tip" id="fs18"></div>
 
         </div>
         <div class="span3">
-          <img src="https://fable-elmish.github.io/react/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <img src="https://elmish.github.io/react/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">elmish-react</li>
-            <li><a href="https://github.com/fable-elmish/react">Source Code on GitHub</a></li>
+            <li><a href="https://github.com/elmish/react">Source Code on GitHub</a></li>
             <li class="nav-header">Quick start</li>
-            <li><a href="https://fable-elmish.github.io/react/browser.html">Browser SPA</a></li>
-            <li><a href="https://fable-elmish.github.io/react/native.html">Native App</a></li>
+            <li><a href="https://elmish.github.io/react/browser.html">Browser SPA</a></li>
+            <li><a href="https://elmish.github.io/react/native.html">Native App</a></li>
             <li class="nav-header">Modules</li>
-            <li><a href="https://fable-elmish.github.io/react/common.html">Common</a></li>
-            <li><a href="https://fable-elmish.github.io/react/react.html">React</a></li>
-            <li><a href="https://fable-elmish.github.io/react/react-native.html">ReactNative</a></li>
+            <li><a href="https://elmish.github.io/react/common.html">Common</a></li>
+            <li><a href="https://elmish.github.io/react/react.html">React</a></li>
+            <li><a href="https://elmish.github.io/react/react-native.html">ReactNative</a></li>
           </ul>
         </div>
       </div>
