--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet"/>
 
-    <link type="text/css" rel="stylesheet" href="https://fable-elmish.github.io/react/content/style_light.css" />
-    <script type="text/javascript" src="https://fable-elmish.github.io/react/content/tips.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://elmish.github.io/react/content/style_light.css" />
+    <script type="text/javascript" src="https://elmish.github.io/react/content/tips.js"></script>
     <style>span.l { display: none }</style>
   </head>
   <body>
     <div class="container">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li><a href="https://fable-elmish.github.io">fable-elmish</a></li>
+          <li><a href="https://elmish.github.io">elmish</a></li>
           <li><a href="http://fable.io">fable</a></li>
           <li><a href="http://fsharp.org">fsharp.org</a></li>
         </ul>
-        <h3 class="muted"><a href="https://fable-elmish.github.io/react/index.html">elmish-react</a></h3>
+        <h3 class="muted"><a href="https://elmish.github.io/react/index.html">elmish-react</a></h3>
       </div>
       <hr />
       <div class="row">
@@ -64,14 +64,14 @@ Thanks to lazy views however, the update process can be optimized by avoiding DO
 <span class="l">7: </span>
 <span class="l">8: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs10', 40)" onmouseover="showTip(event, 'fs10', 40)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs21', 41)" onmouseover="showTip(event, 'fs21', 41)" class="i">React</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs6', 25)" onmouseover="showTip(event, 'fs6', 25)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs17', 26)" onmouseover="showTip(event, 'fs17', 26)" class="i">React</span>
 
 <span class="c">// val view : &#39;a -&gt; ReactElement</span>
-<span onmouseout="hideTip(event, 'fs22', 42)" onmouseover="showTip(event, 'fs22', 42)" class="f">lazyView</span> <span onmouseout="hideTip(event, 'fs1', 43)" onmouseover="showTip(event, 'fs1', 43)" class="f">view1</span> <span onmouseout="hideTip(event, 'fs15', 44)" onmouseover="showTip(event, 'fs15', 44)" class="i">model</span>
+<span onmouseout="hideTip(event, 'fs18', 27)" onmouseover="showTip(event, 'fs18', 27)" class="f">lazyView</span> <span onmouseout="hideTip(event, 'fs1', 28)" onmouseover="showTip(event, 'fs1', 28)" class="i">view1</span> <span onmouseout="hideTip(event, 'fs11', 29)" onmouseover="showTip(event, 'fs11', 29)" class="i">model</span>
 
 <span class="c">// or given a typical view function, defined like this:</span>
 <span class="c">// val view : &#39;a -&gt; Dispatch&lt;&#39;msg&gt; -&gt; ReactElement</span>
-<span onmouseout="hideTip(event, 'fs23', 45)" onmouseover="showTip(event, 'fs23', 45)" class="f">lazyView2</span> <span onmouseout="hideTip(event, 'fs8', 46)" onmouseover="showTip(event, 'fs8', 46)" class="f">view2</span> <span onmouseout="hideTip(event, 'fs15', 47)" onmouseover="showTip(event, 'fs15', 47)" class="i">model</span> <span onmouseout="hideTip(event, 'fs19', 48)" onmouseover="showTip(event, 'fs19', 48)" class="f">dispatch</span>
+<span onmouseout="hideTip(event, 'fs18', 30)" onmouseover="showTip(event, 'fs18', 30)" class="f">lazyView2</span> <span onmouseout="hideTip(event, 'fs4', 31)" onmouseover="showTip(event, 'fs4', 31)" class="i">view2</span> <span onmouseout="hideTip(event, 'fs11', 32)" onmouseover="showTip(event, 'fs11', 32)" class="i">model</span> <span onmouseout="hideTip(event, 'fs15', 33)" onmouseover="showTip(event, 'fs15', 33)" class="i">dispatch</span>
 </code></pre></td>
 </tr>
 </table>
@@ -81,50 +81,44 @@ Thanks to lazy views however, the update process can be optimized by avoiding DO
 <span class="l">2: </span>
 </pre></td>
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="c">// val view : &#39;a -&gt; &#39;b -&gt; Dispatch&lt;&#39;msg&gt; -&gt; ReactElement</span>
-<span onmouseout="hideTip(event, 'fs24', 49)" onmouseover="showTip(event, 'fs24', 49)" class="f">lazyView3</span> <span onmouseout="hideTip(event, 'fs12', 50)" onmouseover="showTip(event, 'fs12', 50)" class="f">view3</span> <span onmouseout="hideTip(event, 'fs17', 51)" onmouseover="showTip(event, 'fs17', 51)" class="i">model1</span> <span onmouseout="hideTip(event, 'fs18', 52)" onmouseover="showTip(event, 'fs18', 52)" class="i">model2</span> <span onmouseout="hideTip(event, 'fs19', 53)" onmouseover="showTip(event, 'fs19', 53)" class="f">dispatch</span>
+<span onmouseout="hideTip(event, 'fs18', 34)" onmouseover="showTip(event, 'fs18', 34)" class="f">lazyView3</span> <span onmouseout="hideTip(event, 'fs7', 35)" onmouseover="showTip(event, 'fs7', 35)" class="i">view3</span> <span onmouseout="hideTip(event, 'fs13', 36)" onmouseover="showTip(event, 'fs13', 36)" class="i">model1</span> <span onmouseout="hideTip(event, 'fs14', 37)" onmouseover="showTip(event, 'fs14', 37)" class="i">model2</span> <span onmouseout="hideTip(event, 'fs15', 38)" onmouseover="showTip(event, 'fs15', 38)" class="i">dispatch</span>
 </code></pre></td>
 </tr>
 </table>
 <p>Elmish-React will skip calling the <code>view3</code> for as long as both <code>model1</code> and <code>model2</code> remain unmodified.</p>
 
-<div class="tip" id="fs1">val view1 : model:&#39;a -&gt; Fable.Import.React.ReactElement<br /><br />Full name: Index.view1</div>
+<div class="tip" id="fs1">val view1 : model:&#39;a -&gt; &#39;b<br /><br />Full name: Index.view1</div>
 <div class="tip" id="fs2">val model : &#39;a</div>
-<div class="tip" id="fs3">namespace Fable</div>
-<div class="tip" id="fs4">namespace Fable.Import</div>
-<div class="tip" id="fs5">module React<br /><br />from Fable.Import</div>
-<div class="tip" id="fs6">type ReactElement<br /><br />Full name: Fable.Import.React.ReactElement</div>
-<div class="tip" id="fs7">val failwith : message:string -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.failwith</div>
-<div class="tip" id="fs8">val view2 : model:&#39;a -&gt; dispatch:Elmish.Dispatch&lt;&#39;msg&gt; -&gt; Fable.Import.React.ReactElement<br /><br />Full name: Index.view2</div>
-<div class="tip" id="fs9">val dispatch : Elmish.Dispatch&lt;&#39;msg&gt;</div>
-<div class="tip" id="fs10">namespace Elmish</div>
-<div class="tip" id="fs11">type Dispatch&lt;&#39;msg&gt; = &#39;msg -&gt; unit<br /><br />Full name: Elmish.Dispatch&lt;_&gt;</div>
-<div class="tip" id="fs12">val view3 : model1:&#39;a -&gt; model2:&#39;b -&gt; dispatch:Elmish.Dispatch&lt;&#39;msg&gt; -&gt; Fable.Import.React.ReactElement<br /><br />Full name: Index.view3</div>
-<div class="tip" id="fs13">val model1 : &#39;a</div>
-<div class="tip" id="fs14">val model2 : &#39;b</div>
-<div class="tip" id="fs15">val model : string option<br /><br />Full name: Index.model</div>
-<div class="tip" id="fs16">union case Option.Some: Value: &#39;T -&gt; Option&lt;&#39;T&gt;</div>
-<div class="tip" id="fs17">val model1 : int option<br /><br />Full name: Index.model1</div>
-<div class="tip" id="fs18">val model2 : float option<br /><br />Full name: Index.model2</div>
-<div class="tip" id="fs19">val dispatch : Elmish.Dispatch&lt;unit&gt;<br /><br />Full name: Index.dispatch</div>
-<div class="tip" id="fs20">type unit = Unit<br /><br />Full name: Microsoft.FSharp.Core.unit</div>
-<div class="tip" id="fs21">namespace Elmish.React</div>
-<div class="tip" id="fs22">val lazyView : view:(&#39;model -&gt; Fable.Import.React.ReactElement) -&gt; (&#39;model -&gt; Fable.Import.React.ReactElement) (requires equality)<br /><br />Full name: Elmish.React.Common.lazyView</div>
-<div class="tip" id="fs23">val lazyView2 : view:(&#39;model -&gt; Elmish.Dispatch&lt;&#39;msg&gt; -&gt; Fable.Import.React.ReactElement) -&gt; (&#39;model -&gt; Elmish.Dispatch&lt;&#39;msg&gt; -&gt; Fable.Import.React.ReactElement) (requires equality)<br /><br />Full name: Elmish.React.Common.lazyView2</div>
-<div class="tip" id="fs24">val lazyView3 : view:(&#39;a -&gt; &#39;b -&gt; Elmish.Dispatch&lt;&#39;c&gt; -&gt; Fable.Import.React.ReactElement) -&gt; (&#39;a -&gt; &#39;b -&gt; Elmish.Dispatch&lt;&#39;c&gt; -&gt; Fable.Import.React.ReactElement) (requires equality and equality)<br /><br />Full name: Elmish.React.Common.lazyView3</div>
+<div class="tip" id="fs3">val failwith : message:string -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.failwith</div>
+<div class="tip" id="fs4">val view2 : model:&#39;a -&gt; dispatch:&#39;b -&gt; &#39;c<br /><br />Full name: Index.view2</div>
+<div class="tip" id="fs5">val dispatch : &#39;b</div>
+<div class="tip" id="fs6">namespace Elmish</div>
+<div class="tip" id="fs7">val view3 : model1:&#39;a -&gt; model2:&#39;b -&gt; dispatch:&#39;c -&gt; &#39;d<br /><br />Full name: Index.view3</div>
+<div class="tip" id="fs8">val model1 : &#39;a</div>
+<div class="tip" id="fs9">val model2 : &#39;b</div>
+<div class="tip" id="fs10">val dispatch : &#39;c</div>
+<div class="tip" id="fs11">val model : string option<br /><br />Full name: Index.model</div>
+<div class="tip" id="fs12">union case Option.Some: Value: &#39;T -&gt; Option&lt;&#39;T&gt;</div>
+<div class="tip" id="fs13">val model1 : int option<br /><br />Full name: Index.model1</div>
+<div class="tip" id="fs14">val model2 : float option<br /><br />Full name: Index.model2</div>
+<div class="tip" id="fs15">val dispatch : obj<br /><br />Full name: Index.dispatch</div>
+<div class="tip" id="fs16">type unit = Unit<br /><br />Full name: Microsoft.FSharp.Core.unit</div>
+<div class="tip" id="fs17">namespace Elmish.React</div>
+<div class="tip" id="fs18"></div>
 
         </div>
         <div class="span3">
-          <img src="https://fable-elmish.github.io/react/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <img src="https://elmish.github.io/react/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">elmish-react</li>
-            <li><a href="https://github.com/fable-elmish/react">Source Code on GitHub</a></li>
+            <li><a href="https://github.com/elmish/react">Source Code on GitHub</a></li>
             <li class="nav-header">Quick start</li>
-            <li><a href="https://fable-elmish.github.io/react/browser.html">Browser SPA</a></li>
-            <li><a href="https://fable-elmish.github.io/react/native.html">Native App</a></li>
+            <li><a href="https://elmish.github.io/react/browser.html">Browser SPA</a></li>
+            <li><a href="https://elmish.github.io/react/native.html">Native App</a></li>
             <li class="nav-header">Modules</li>
-            <li><a href="https://fable-elmish.github.io/react/common.html">Common</a></li>
-            <li><a href="https://fable-elmish.github.io/react/react.html">React</a></li>
-            <li><a href="https://fable-elmish.github.io/react/react-native.html">ReactNative</a></li>
+            <li><a href="https://elmish.github.io/react/common.html">Common</a></li>
+            <li><a href="https://elmish.github.io/react/react.html">React</a></li>
+            <li><a href="https://elmish.github.io/react/react-native.html">ReactNative</a></li>
           </ul>
         </div>
       </div>
