--- a/native.html
+++ b/native.html
@@ -13,19 +13,19 @@
     <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet"/>
 
-    <link type="text/css" rel="stylesheet" href="https://fable-elmish.github.io/react/content/style_light.css" />
-    <script type="text/javascript" src="https://fable-elmish.github.io/react/content/tips.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://elmish.github.io/react/content/style_light.css" />
+    <script type="text/javascript" src="https://elmish.github.io/react/content/tips.js"></script>
     <style>span.l { display: none }</style>
   </head>
   <body>
     <div class="container">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li><a href="https://fable-elmish.github.io">fable-elmish</a></li>
+          <li><a href="https://elmish.github.io">elmish</a></li>
           <li><a href="http://fable.io">fable</a></li>
           <li><a href="http://fsharp.org">fsharp.org</a></li>
         </ul>
-        <h3 class="muted"><a href="https://fable-elmish.github.io/react/index.html">elmish-react</a></h3>
+        <h3 class="muted"><a href="https://elmish.github.io/react/index.html">elmish-react</a></h3>
       </div>
       <hr />
       <div class="row">
@@ -105,28 +105,28 @@
 <span class="l">35: </span>
 <span class="l">36: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs11', 17)" onmouseover="showTip(event, 'fs11', 17)" class="i">Fable</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs12', 18)" onmouseover="showTip(event, 'fs12', 18)" class="i">Import</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs13', 19)" onmouseover="showTip(event, 'fs13', 19)" class="i">ReactNative</span>
-<span class="k">open</span> <span onmouseout="hideTip(event, 'fs11', 20)" onmouseover="showTip(event, 'fs11', 20)" class="i">Fable</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs14', 21)" onmouseover="showTip(event, 'fs14', 21)" class="i">Helpers</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs13', 22)" onmouseover="showTip(event, 'fs13', 22)" class="i">ReactNative</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span class="i">Fable</span><span class="o">.</span><span class="i">Import</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs11', 17)" onmouseover="showTip(event, 'fs11', 17)" class="i">ReactNative</span>
+<span class="k">open</span> <span class="i">Fable</span><span class="o">.</span><span class="i">Helpers</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs11', 18)" onmouseover="showTip(event, 'fs11', 18)" class="i">ReactNative</span>
 
 <span class="c">// define our button element</span>
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs15', 23)" onmouseover="showTip(event, 'fs15', 23)" class="f">button</span> <span onmouseout="hideTip(event, 'fs16', 24)" onmouseover="showTip(event, 'fs16', 24)" class="i">label</span> <span onmouseout="hideTip(event, 'fs17', 25)" onmouseover="showTip(event, 'fs17', 25)" class="i">onPress</span> <span class="o">=</span>
+<span class="k">let</span> <span onmouseout="hideTip(event, 'fs12', 19)" onmouseover="showTip(event, 'fs12', 19)" class="f">button</span> <span onmouseout="hideTip(event, 'fs13', 20)" onmouseover="showTip(event, 'fs13', 20)" class="i">label</span> <span onmouseout="hideTip(event, 'fs14', 21)" onmouseover="showTip(event, 'fs14', 21)" class="i">onPress</span> <span class="o">=</span>
     <span class="i">text</span> [ <span class="i">TextProperties</span><span class="o">.</span><span class="i">Style</span>
             [ <span class="i">Color</span> <span class="s">&quot;#FFFFFF&quot;</span>
               <span class="i">TextAlign</span> <span class="i">TextAlignment</span><span class="o">.</span><span class="i">Center</span>
               <span class="i">Margin</span> <span class="n">5.</span>
               <span class="i">FontSize</span> <span class="n">15.</span> ]] 
-          <span onmouseout="hideTip(event, 'fs16', 26)" onmouseover="showTip(event, 'fs16', 26)" class="i">label</span>
+          <span onmouseout="hideTip(event, 'fs13', 22)" onmouseover="showTip(event, 'fs13', 22)" class="i">label</span>
     <span class="o">|&gt;</span> <span class="i">touchableHighlightWithChild</span> 
         [ <span class="i">TouchableHighlightProperties</span><span class="o">.</span><span class="i">Style</span> 
             [ <span class="i">BackgroundColor</span> <span class="s">&quot;#428bca&quot;</span>
               <span class="i">BorderRadius</span> <span class="n">4.</span>
               <span class="i">Margin</span> <span class="n">5.</span> ]
           <span class="i">TouchableHighlightProperties</span><span class="o">.</span><span class="i">UnderlayColor</span> <span class="s">&quot;#5499C4&quot;</span>
-          <span class="i">OnPress</span> <span onmouseout="hideTip(event, 'fs17', 27)" onmouseover="showTip(event, 'fs17', 27)" class="i">onPress</span> ]
+          <span class="i">OnPress</span> <span onmouseout="hideTip(event, 'fs14', 23)" onmouseover="showTip(event, 'fs14', 23)" class="i">onPress</span> ]
 
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs18', 28)" onmouseover="showTip(event, 'fs18', 28)" class="f">view</span> <span onmouseout="hideTip(event, 'fs19', 29)" onmouseover="showTip(event, 'fs19', 29)" class="i">count</span> (<span onmouseout="hideTip(event, 'fs20', 30)" onmouseover="showTip(event, 'fs20', 30)" class="f">dispatch</span><span class="o">:</span><span onmouseout="hideTip(event, 'fs21', 31)" onmouseover="showTip(event, 'fs21', 31)" class="t">Dispatch</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs3', 32)" onmouseover="showTip(event, 'fs3', 32)" class="t">Msg</span><span class="o">&gt;</span>) <span class="o">=</span>
-    <span class="k">let</span> <span onmouseout="hideTip(event, 'fs22', 33)" onmouseover="showTip(event, 'fs22', 33)" class="f">onClick</span> <span onmouseout="hideTip(event, 'fs9', 34)" onmouseover="showTip(event, 'fs9', 34)" class="i">msg</span> <span class="o">=</span>
-      <span class="k">fun</span> () <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs9', 35)" onmouseover="showTip(event, 'fs9', 35)" class="i">msg</span> <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs20', 36)" onmouseover="showTip(event, 'fs20', 36)" class="f">dispatch</span> 
+<span class="k">let</span> <span onmouseout="hideTip(event, 'fs15', 24)" onmouseover="showTip(event, 'fs15', 24)" class="f">view</span> <span onmouseout="hideTip(event, 'fs16', 25)" onmouseover="showTip(event, 'fs16', 25)" class="i">count</span> (<span onmouseout="hideTip(event, 'fs17', 26)" onmouseover="showTip(event, 'fs17', 26)" class="f">dispatch</span><span class="o">:</span><span class="i">Dispatch</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs3', 27)" onmouseover="showTip(event, 'fs3', 27)" class="i">Msg</span><span class="o">&gt;</span>) <span class="o">=</span>
+    <span class="k">let</span> <span onmouseout="hideTip(event, 'fs18', 28)" onmouseover="showTip(event, 'fs18', 28)" class="f">onClick</span> <span onmouseout="hideTip(event, 'fs19', 29)" onmouseover="showTip(event, 'fs19', 29)" class="i">msg</span> <span class="o">=</span>
+      <span class="k">fun</span> () <span class="k">-&gt;</span> <span onmouseout="hideTip(event, 'fs19', 30)" onmouseover="showTip(event, 'fs19', 30)" class="i">msg</span> <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs17', 31)" onmouseover="showTip(event, 'fs17', 31)" class="f">dispatch</span> 
 
     <span class="c">// construct RN view</span>
     <span class="i">view</span> [ <span class="i">ViewProperties</span><span class="o">.</span><span class="i">Style</span>
@@ -138,9 +138,9 @@
               <span class="i">JustifyContent</span> <span class="i">JustifyContent</span><span class="o">.</span><span class="i">Center</span>
               <span class="i">Flex</span> <span class="n">1.</span>
               <span class="i">BackgroundColor</span> <span class="s">&quot;#615A5B&quot;</span> ]]
-         [ <span onmouseout="hideTip(event, 'fs15', 37)" onmouseover="showTip(event, 'fs15', 37)" class="i">button</span> <span class="s">&quot;-&quot;</span> (<span onmouseout="hideTip(event, 'fs22', 38)" onmouseover="showTip(event, 'fs22', 38)" class="i">onClick</span> <span onmouseout="hideTip(event, 'fs5', 39)" onmouseover="showTip(event, 'fs5', 39)" class="i">Decrement</span>)
-           <span class="i">text</span> [] (<span onmouseout="hideTip(event, 'fs23', 40)" onmouseover="showTip(event, 'fs23', 40)" class="i">string</span> <span onmouseout="hideTip(event, 'fs19', 41)" onmouseover="showTip(event, 'fs19', 41)" class="i">count</span>)
-           <span onmouseout="hideTip(event, 'fs15', 42)" onmouseover="showTip(event, 'fs15', 42)" class="i">button</span> <span class="s">&quot;+&quot;</span> (<span onmouseout="hideTip(event, 'fs22', 43)" onmouseover="showTip(event, 'fs22', 43)" class="i">onClick</span> <span onmouseout="hideTip(event, 'fs4', 44)" onmouseover="showTip(event, 'fs4', 44)" class="i">Increment</span>) ]
+         [ <span onmouseout="hideTip(event, 'fs12', 32)" onmouseover="showTip(event, 'fs12', 32)" class="i">button</span> <span class="s">&quot;-&quot;</span> (<span onmouseout="hideTip(event, 'fs18', 33)" onmouseover="showTip(event, 'fs18', 33)" class="i">onClick</span> <span onmouseout="hideTip(event, 'fs5', 34)" onmouseover="showTip(event, 'fs5', 34)" class="i">Decrement</span>)
+           <span class="i">text</span> [] (<span onmouseout="hideTip(event, 'fs20', 35)" onmouseover="showTip(event, 'fs20', 35)" class="i">string</span> <span onmouseout="hideTip(event, 'fs16', 36)" onmouseover="showTip(event, 'fs16', 36)" class="i">count</span>)
+           <span onmouseout="hideTip(event, 'fs12', 37)" onmouseover="showTip(event, 'fs12', 37)" class="i">button</span> <span class="s">&quot;+&quot;</span> (<span onmouseout="hideTip(event, 'fs18', 38)" onmouseover="showTip(event, 'fs18', 38)" class="i">onClick</span> <span onmouseout="hideTip(event, 'fs4', 39)" onmouseover="showTip(event, 'fs4', 39)" class="i">Increment</span>) ]
 </code></pre></td>
 </tr>
 </table>
@@ -152,11 +152,11 @@
 <span class="l">4: </span>
 <span class="l">5: </span>
 </pre></td>
-<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs6', 45)" onmouseover="showTip(event, 'fs6', 45)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs13', 46)" onmouseover="showTip(event, 'fs13', 46)" class="i">ReactNative</span>
+<td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="k">open</span> <span onmouseout="hideTip(event, 'fs6', 40)" onmouseover="showTip(event, 'fs6', 40)" class="i">Elmish</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs11', 41)" onmouseover="showTip(event, 'fs11', 41)" class="i">ReactNative</span>
 
-<span onmouseout="hideTip(event, 'fs24', 47)" onmouseover="showTip(event, 'fs24', 47)" class="t">Program</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs25', 48)" onmouseover="showTip(event, 'fs25', 48)" class="f">mkSimple</span> <span onmouseout="hideTip(event, 'fs7', 49)" onmouseover="showTip(event, 'fs7', 49)" class="f">init</span> <span onmouseout="hideTip(event, 'fs8', 50)" onmouseover="showTip(event, 'fs8', 50)" class="f">update</span> <span onmouseout="hideTip(event, 'fs18', 51)" onmouseover="showTip(event, 'fs18', 51)" class="f">view</span>
-<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs24', 52)" onmouseover="showTip(event, 'fs24', 52)" class="t">Program</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs26', 53)" onmouseover="showTip(event, 'fs26', 53)" class="f">withReactNative</span> <span class="s">&quot;counter&quot;</span>
-<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs24', 54)" onmouseover="showTip(event, 'fs24', 54)" class="t">Program</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs27', 55)" onmouseover="showTip(event, 'fs27', 55)" class="f">run</span>
+<span onmouseout="hideTip(event, 'fs21', 42)" onmouseover="showTip(event, 'fs21', 42)" class="i">Program</span><span class="o">.</span><span class="i">mkSimple</span> <span onmouseout="hideTip(event, 'fs7', 43)" onmouseover="showTip(event, 'fs7', 43)" class="i">init</span> <span onmouseout="hideTip(event, 'fs8', 44)" onmouseover="showTip(event, 'fs8', 44)" class="i">update</span> <span onmouseout="hideTip(event, 'fs15', 45)" onmouseover="showTip(event, 'fs15', 45)" class="i">view</span>
+<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs21', 46)" onmouseover="showTip(event, 'fs21', 46)" class="t">Program</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs22', 47)" onmouseover="showTip(event, 'fs22', 47)" class="f">withReactNative</span> <span class="s">&quot;counter&quot;</span>
+<span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs21', 48)" onmouseover="showTip(event, 'fs21', 48)" class="i">Program</span><span class="o">.</span><span class="i">run</span>
 </code></pre></td>
 </tr>
 </table>
@@ -180,37 +180,32 @@ import <span class="o">*</span> <span class="k">as</span> app from <span class="
 <div class="tip" id="fs8">val update : msg:Msg -&gt; count:int -&gt; int<br /><br />Full name: Native.update</div>
 <div class="tip" id="fs9">val msg : Msg</div>
 <div class="tip" id="fs10">val count : int</div>
-<div class="tip" id="fs11">namespace Fable</div>
-<div class="tip" id="fs12">namespace Fable.Import</div>
-<div class="tip" id="fs13">namespace Elmish.ReactNative</div>
-<div class="tip" id="fs14">namespace Fable.Helpers</div>
-<div class="tip" id="fs15">val button : label:&#39;a -&gt; onPress:&#39;b -&gt; &#39;c<br /><br />Full name: Native.button</div>
-<div class="tip" id="fs16">val label : &#39;a</div>
-<div class="tip" id="fs17">val onPress : &#39;b</div>
-<div class="tip" id="fs18">val view : count:&#39;a -&gt; dispatch:Dispatch&lt;Msg&gt; -&gt; &#39;b<br /><br />Full name: Native.view</div>
-<div class="tip" id="fs19">val count : &#39;a</div>
-<div class="tip" id="fs20">val dispatch : Dispatch&lt;Msg&gt;</div>
-<div class="tip" id="fs21">type Dispatch&lt;&#39;msg&gt; = &#39;msg -&gt; unit<br /><br />Full name: Elmish.Dispatch&lt;_&gt;</div>
-<div class="tip" id="fs22">val onClick : (Msg -&gt; unit -&gt; unit)</div>
-<div class="tip" id="fs23">Multiple items<br />val string : value:&#39;T -&gt; string<br /><br />Full name: Microsoft.FSharp.Core.Operators.string<br /><br />--------------------<br />type string = System.String<br /><br />Full name: Microsoft.FSharp.Core.string</div>
-<div class="tip" id="fs24">Multiple items<br />module Program<br /><br />from Elmish.ReactNative<br /><br />--------------------<br />module Program<br /><br />from Elmish<br /><br />--------------------<br />type Program&lt;&#39;arg,&#39;model,&#39;msg,&#39;view&gt; =<br />&#160;&#160;{init: &#39;arg -&gt; &#39;model * Cmd&lt;&#39;msg&gt;;<br />&#160;&#160;&#160;update: &#39;msg -&gt; &#39;model -&gt; &#39;model * Cmd&lt;&#39;msg&gt;;<br />&#160;&#160;&#160;subscribe: &#39;model -&gt; Cmd&lt;&#39;msg&gt;;<br />&#160;&#160;&#160;view: &#39;model -&gt; Dispatch&lt;&#39;msg&gt; -&gt; &#39;view;<br />&#160;&#160;&#160;setState: &#39;model -&gt; Dispatch&lt;&#39;msg&gt; -&gt; unit;<br />&#160;&#160;&#160;onError: string * exn -&gt; unit;}<br /><br />Full name: Elmish.Program&lt;_,_,_,_&gt;</div>
-<div class="tip" id="fs25">val mkSimple : init:(&#39;arg -&gt; &#39;model) -&gt; update:(&#39;msg -&gt; &#39;model -&gt; &#39;model) -&gt; view:(&#39;model -&gt; Dispatch&lt;&#39;msg&gt; -&gt; &#39;view) -&gt; Program&lt;&#39;arg,&#39;model,&#39;msg,&#39;view&gt;<br /><br />Full name: Elmish.Program.mkSimple</div>
-<div class="tip" id="fs26">val withReactNative : appKey:string -&gt; program:Program&lt;&#39;a,&#39;b,&#39;c,Fable.Import.React.ReactElement&gt; -&gt; Program&lt;&#39;a,&#39;b,&#39;c,Fable.Import.React.ReactElement&gt;<br /><br />Full name: Elmish.ReactNative.Program.withReactNative</div>
-<div class="tip" id="fs27">val run : program:Program&lt;unit,&#39;model,&#39;msg,&#39;view&gt; -&gt; unit<br /><br />Full name: Elmish.Program.run</div>
+<div class="tip" id="fs11">namespace Elmish.ReactNative</div>
+<div class="tip" id="fs12">val button : label:&#39;a -&gt; onPress:&#39;b -&gt; &#39;c<br /><br />Full name: Native.button</div>
+<div class="tip" id="fs13">val label : &#39;a</div>
+<div class="tip" id="fs14">val onPress : &#39;b</div>
+<div class="tip" id="fs15">val view : count:&#39;a -&gt; dispatch:(&#39;b -&gt; &#39;c) -&gt; &#39;d<br /><br />Full name: Native.view</div>
+<div class="tip" id="fs16">val count : &#39;a</div>
+<div class="tip" id="fs17">val dispatch : (&#39;b -&gt; &#39;c)</div>
+<div class="tip" id="fs18">val onClick : (&#39;b -&gt; unit -&gt; &#39;c)</div>
+<div class="tip" id="fs19">val msg : &#39;b</div>
+<div class="tip" id="fs20">Multiple items<br />val string : value:&#39;T -&gt; string<br /><br />Full name: Microsoft.FSharp.Core.Operators.string<br /><br />--------------------<br />type string = System.String<br /><br />Full name: Microsoft.FSharp.Core.string</div>
+<div class="tip" id="fs21">module Program<br /><br />from Elmish.ReactNative</div>
+<div class="tip" id="fs22"></div>
 
         </div>
         <div class="span3">
-          <img src="https://fable-elmish.github.io/react/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <img src="https://elmish.github.io/react/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">elmish-react</li>
-            <li><a href="https://github.com/fable-elmish/react">Source Code on GitHub</a></li>
+            <li><a href="https://github.com/elmish/react">Source Code on GitHub</a></li>
             <li class="nav-header">Quick start</li>
-            <li><a href="https://fable-elmish.github.io/react/browser.html">Browser SPA</a></li>
-            <li><a href="https://fable-elmish.github.io/react/native.html">Native App</a></li>
+            <li><a href="https://elmish.github.io/react/browser.html">Browser SPA</a></li>
+            <li><a href="https://elmish.github.io/react/native.html">Native App</a></li>
             <li class="nav-header">Modules</li>
-            <li><a href="https://fable-elmish.github.io/react/common.html">Common</a></li>
-            <li><a href="https://fable-elmish.github.io/react/react.html">React</a></li>
-            <li><a href="https://fable-elmish.github.io/react/react-native.html">ReactNative</a></li>
+            <li><a href="https://elmish.github.io/react/common.html">Common</a></li>
+            <li><a href="https://elmish.github.io/react/react.html">React</a></li>
+            <li><a href="https://elmish.github.io/react/react-native.html">ReactNative</a></li>
           </ul>
         </div>
       </div>
